styles/styles.css
html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  background: #e0e0e0;
  font-family: Georgia;
  overflow: hidden;
}

.container {
  width: 100%;
  height: 100%;
}

table {
  width: 100%;
  height: 100%;
}

tr, td {
  height: 100%;
}

.middle_td {
  width: 20px;
}

.ta_container {
  width: 100%;
  height: 100%;
  padding: 65px 20px 20px 20px;
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
}

textarea {

  transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  width: 100%;
  height: 100%;
  border: 1px solid #ccc;
  border-radius: 4px;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  padding: 8px;
  -webkit-box-shadow: 0 1px #fff;
  -moz-box-shadow: 0 1px #fff;
  box-shadow: 0 1px #fff;
  color: #222;
  outline: none;
  _width: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  white-space: pre-wrap;
  resize: none;
}

textarea:focus {
  -moz-box-shadow: 0 0 8px rgba(82,168,236,0.5);
  -webkit-box-shadow: 0 0 8px rgba(82,168,236,0.5);
  border-color: rgba(82,168,236,0.75) !important;
}

.instructions {
  position: absolute;
  padding-left: 25px;
  font-family: Arial;
  width: 2000px;
  top: 15px;
}

h1 {
  font-size: 2em;
  color: #454545;
  text-shadow: 0 1px #fff;
  display: inline;
}

span {
  margin-left: 50px;
}

@-moz-document url-prefix() {
  .ta_container {
    padding: 105px 20px 20px 20px;
  }
}

